# deepresearch

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  agents.md  design2.md  exa-notes.md  langgraph.json  pyproject.toml
.github/workflows/: online-evals.yml  test.yml
docs/: adr-001-history-remediation.md  external_ai_review_prompt.md  linear_followups_2026-02-24.md
examples/: comparing-search-providers-for-llm-agents.md  rag-failure-modes.md
scripts/: run_online_evals.py  validate_multiagent_runtime.py
src/deepresearch/: __init__.py  cli.py  config.py  env.py  graph.py  intake.py  message_utils.py  nodes.py  prompts.py  report.py  researcher_subgraph.py  runtime_utils.py  state.py  supervisor_subgraph.py
src/deepresearch/evals/: __init__.py  callback.py  evaluators.py  prompts.py
tests/: _fakes.py  conftest.py  test_architecture_guardrails.py  test_cli_progress.py  test_cli_progress_display.py  test_config_and_cli.py  test_dependency_pins.py  test_env.py  test_evals.py  test_evidence_quality_gate.py  test_final_report_generation.py  test_graph_native_subgraphs.py  test_intake_scope_phase.py  test_nodes_tools.py  test_persisted_thread_continuity.py  test_prompts_contract.py  test_researcher_subgraph_integration.py  test_supervisor_subgraph.py
