[project]
name = "deepresearch"
version = "0.1.0"
description = "Multi-agent deep research system built on LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-exa>=0.1.0",
    "langchain-tavily>=0.1.0",
    "tavily-python>=0.5.0",
    "certifi>=2024.0.0",
    "langsmith>=0.2.0",
]

[project.scripts]
deepresearch = "deepresearch.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
deepresearch = "src/deepresearch"
