[project]
name = "deepresearch"
version = "0.1.0"
description = "Multi-agent deep research system built on LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.10",
    "langgraph==1.0.9",
    "langchain-core==1.2.14",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "langchain-anthropic==1.3.3",
    "langchain-openai==1.1.10",
    "langchain-community==0.4.1",
    "langchain-exa==1.0.0",
    "langchain-tavily==0.2.17",
    "tavily-python==0.7.21",
    "certifi==2026.1.4",
    "langsmith==0.7.6",
    "deepagents==0.4.3",
    "trafilatura==2.0.0",
    "beautifulsoup4==4.14.3",
    "openevals==0.1.3",
]

[project.scripts]
deepresearch = "deepresearch.cli:main"

[project.optional-dependencies]
dev = [
    "ruff==0.13.0",
    "pytest==8.4.1",
]

[build-system]
requires = ["setuptools==82.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
deepresearch = "src/deepresearch"

[tool.ruff]
line-length = 120
target-version = "py311"
